<resources>
    <string name="app_name">Pair Creator</string>
    <string name="hello">Здравствуйте!</string>
    <string name="info">Выберите пару:</string>
    <string name="key_value"><b>%1$s:</b> %2$s</string>
    <string name="enter_pair">Введите пару:</string>
    <string name="submit">Добавить</string>
    <string name="key">Ключ</string>
    <string name="value">Значение</string>
    <string name="send">Отправить</string>
    <string name="selected">Выбранная пара: %1$s</string>
</resources>